2004-11-15  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : hide the Get/Set Color methods that are marked
	deprecated but didn't exist in 1.0.

2004-11-13  Duncan Mak  <duncan@ximian.com>

	* generator/SymbolTable.cs: Add support for GDestroyNotify, so
	that `gtk_cell_layout_set_cell_data_func' will be generated in
	Gtk.ComboBox.

2004-11-13  Mike Kestner  <mkestner@novell.com>

	* */*-api.raw : rerun the parser for new vm-age and cleanups.
	* parser/gapi_pp.pl : suppress union types, since we can't generate
	them.  smarter get_type regex. ignore #errors.
	* parser/gapi2xml.pl : generate vm elements for GInterfaces. Deal
	with G_CONST_RETURN in vms. deal with "struct _foo" types in method
	prototypes.
	* gtk/ComboBox.custom : remove now correctly generated dllimport.

2004-11-13  Mike Kestner  <mkestner@novell.com>

	* sources/gda.patch : fix broken signal defs.
	* sources/gnomedb.patch : fix broken signal defs.
	* sources/Makefile.am : apply new patches, and dist some others.

2004-11-12  Mike Kestner  <mkestner@novell.com>

	* parser/gapi_pp.pl : fix multi-line extern parsing.

2004-11-12  Mike Kestner  <mkestner@novell.com>

	* parser/gapi_pp.pl : fix a struct parsing bug.

2004-11-12  Mike Kestner  <mkestner@novell.com>

	* sources/gtk-sharp-sources.xml : exclude a couple more pango headers.

2004-11-09  Mike Kestner  <mkestner@novell.com>

	* */Makefile.am : make the Obsolete warnings shaddup.

2004-11-09  Mike Kestner  <mkestner@novell.com>

	* configure.in : conditional stuff for gnomevfs
	* doc/Makefile.am : conditionally update panelapplet and gnomevfs.
	* doc/en/*/* : update to add PanelApplet and Gnome.Vfs stubs.
	* gnomevfs/Makefile.am : make conditional
	
2004-11-08  Dan Winship  <danw@novell.com>

	* glib/Object.cs (CreateNativeObject): virtualize
	(Object(GType)): Mark this ctor Obsolete

	* gtk/Gtk.metadata: disable the generated GType ctor on Gtk.Widget

	* gtk/Widget.custom (Widget, CreateNativeObject,