@@ -154,8 +154,8 @@
         <summary>Sets a child property of a <see cref="T:Gtk.Widget" />.</summary>
         <param name="child">a child of this <see cref="T:Gtk.Container" /></param>
         <param name="property_name">the child property name</param>
-        <param name="value">the value to set <paramref name="property_name"/> to</param>
-        <remarks>You will not normally need to use this method; Gtk# automatically generates child property accessors for all <see cref="T:Gtk.Container"/> subclasses.</remarks>
+        <param name="value">the value to set <paramref name="property_name" /> to</param>
+        <remarks>You will not normally need to use this method; Gtk# automatically generates child property accessors for all <see cref="T:Gtk.Container" /> subclasses.</remarks>
       </Docs>
     </Member>
     <Member MemberName="ChildGetProperty">
@@ -172,8 +172,8 @@
         <summary>Gets a child property of a <see cref="T:Gtk.Widget" />.</summary>
         <param name="child">a child of this <see cref="T:Gtk.Container" /></param>
         <param name="property_name">the child property name</param>
-        <param name="value">the value of the <paramref name="property_name"/> property of <paramref name="child"/></param>
-        <remarks>You will not normally need to use this method; Gtk# automatically generates child property accessors for all <see cref="T:Gtk.Container"/> subclasses.</remarks>
+        <param name="value">the value of the <paramref name="property_name" /> property of <paramref name="child" /></param>
+        <remarks>You will not normally need to use this method; Gtk# automatically generates child property accessors for all <see cref="T:Gtk.Container" /> subclasses.</remarks>
       </Docs>
     </Member>
     <Member MemberName="PropagateExpose">
@@ -281,7 +281,7 @@
       </Docs>
     </Member>
     <Member MemberName="FocusChild">
-      <MemberSignature Language="C#" Value="public Gtk.Widget FocusChild { set; };" />
+      <MemberSignature Language="C#" Value="public Gtk.Widget FocusChild { set; get; };" />
       <MemberType>Property</MemberType>
       <ReturnValue>
         <ReturnType>Gtk.Widget</ReturnType>
@@ -289,7 +289,7 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>Moves the focus to a particular child widget.</summary>
+        <summary>Moves the focus to a particular child widget or finds the last-focused widget.</summary>
         <param name="value">A <see cref="T:Gtk.Widget" />, a child of this container.</param>
         <returns>an object of type <see cref="T:Gtk.Widget" /></returns>
         <remarks />
@@ -365,8 +365,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>Fired when a child widget is added to the container.</summary>
-        <remarks />
+        <summary>Fired when a child widget is added to the container via <see cref="M:Gtk.Container.Add"/>.</summary>
+        <remarks>Note that this event is fired only when <see cref="M:Gtk.Container.Add"/> (or its C equivalent) is called. It is not a generic widget-added notification. For example, calling <see cref="M:Gtk.Box.PackStart"/> will not result in this event firing.</remarks>
       </Docs>
     </Member>
     <Member MemberName="FocusChildSet">
@@ -389,8 +389,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>Fired when a child widget is removed from this container.</summary>
-        <remarks />
+        <summary>Fired when a child widget is removed from this container</summary>
+        <remarks>Note that this event is fired only when <see cref="M:Gtk.Container.Remove"/> (or its C equivalent) is called. If a <see cref="T:Gtk.Container"/> subclass defines additional methods for removing widgets, then calling those methods will not result in this event being fired.</remarks>
       </Docs>
     </Member>
     <Member MemberName="ResizeChecked">
