@@ -1,3 +1,10 @@
+2004-11-15  Dan Winship  <danw@novell.com>
+
+	* en/Gtk/Container.xml (FocusChild): Has a getter now too.
+	(Added): Clarify that this only means "Gtk.Container.Add was
+	called", and doesn't get fired when you call Gtk.Box.PackStart,
+	etc
+
 2004-11-15 Mike Kestner <mkestner@ximian.com>
 
 	* en/Gtk/ColorSelection.xml : remove newly hidden deprecated methods.
