@@ -1,3 +1,13 @@
+2004-11-15  Dan Winship  <danw@novell.com>
+
+	* gtk/glue/container.c (gtksharp_container_get_focus_child): New
+	glue method to get container->focus_child
+
+	* gtk/Gtk.metadata: hide SetFocusChild
+
+	* gtk/Container.custom (FocusChild): implement with both getter
+	and setter
+
 2004-11-15  Mike Kestner  <mkestner@novell.com>
 
 	* gtk/Gtk.metadata : hide the Get/Set Color methods that are marked
